--- a/themes/brownsurfing/css/sections/nav.css
+++ b/themes/brownsurfing/css/sections/nav.css
@@ -32,10 +32,16 @@ ul.menu>li>a {
     text-transform: uppercase;
     color: gray;
     display: inline-block;
-    /* 
-    font-weight:200;
-    font-size: 14px;
-    font-family: unset; */
+}
+
+@media only screen and (max-width:767px) {
+    ul.menu>li>a {
+        font-size: 15px;
+    }
+}
+
+.contact-nav p {
+    display: none;
 }
 
 /* .current-menu-item>a,
@@ -76,11 +82,11 @@ ul.menu>li:hover>a {
     }
 } */
 
-@media screen and (max-width:1199px) {
-    .nav ul.menu {
+@media only screen and (max-width:1199px) {
+    /* .nav ul.menu {
         display: block !important;
-        /* padding: 0 20px 20px; */
-    }
+
+    } */
 
     /* ul.menu > li > a {
         color:white;
